Added meta tag.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 -->
 
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="view port" content="width=device-width">
     <title>A day in the life of Hubway</title>
     <link rel="stylesheet" href="style.css">
-
   </head>
 
 
